wrap everything in containers to fix scroll-bar issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,6 @@ label {
     display: block;
 }
 
-.tweet {
-    margin: 1em;
-}
-
 .user {
     padding: 1em;
 }
